Integrate audit_uevents.h into the bsm tree from the Apple Darwin 7.4 bsm drop.
Hook up audit_uevents.h to the bsm include build, remove from the
libbsm build.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 75794]

--- a/libbsm/Makefile
+++ b/libbsm/Makefile
@@ -22,8 +22,7 @@ SRCS=	bsm_audit.c							\
 	bsm_user.c							\
 	bsm_wrappers.c
 
-INCS=	audit_uevents.h							\
-	libbsm.h
+INCS=	libbsm.h
 
 MAN=	libbsm.3							\
 	au_class.3							\
