Try to avoid including system includes when not necessary, as system BSM include files may interfere with local OpenBSM includes.  This might not be quite the right way to do it, but helps with building on Darwin.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 75882]

--- a/bin/praudit/Makefile
+++ b/bin/praudit/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 #
 
-CFLAGS+=	-I ../.. -I ../../libbsm
+CFLAGS+=	-I- -I ../.. -I ../../libbsm -I.
 PROG=		praudit
 MAN=		praudit.1
 DPADD=		/usr/lib/libbsm.a
