Hook up bsm_notify.c to the build, but only compile the contents if running on Darwin.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 75899]

--- a/libbsm/Makefile
+++ b/libbsm/Makefile
@@ -18,6 +18,7 @@ SRCS=	bsm_audit.c							\
 	bsm_flags.c							\
 	bsm_io.c							\
 	bsm_mask.c							\
+	bsm_notify.c							\
 	bsm_token.c							\
 	bsm_user.c							\
 	bsm_wrappers.c
