First 1/3 or so of audit.log.5, which describes the BSM file format.  More to follow.  Generated a number of interesting questions now sent to trustedbsd-discuss, more of them to follow also, no doubt.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 76332]

--- a/man/Makefile
+++ b/man/Makefile
@@ -9,6 +9,7 @@ MAN=	audit.2								\
 	getauid.2							\
 	setaudit.2							\
 	setauid.2							\
+	audit.log.5							\
 	audit_class.5							\
 	audit_control.5							\
 	audit_event.5							\
