OpenBSM should look for shared libraries in the local libbsm build tree first.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 76571]

--- a/bin/auditreduce/Makefile
+++ b/bin/auditreduce/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 #
 
-CFLAGS+=	-I- -I ../.. -I ../../libbsm -I.
+CFLAGS+=	-I- -I ../.. -I ../../libbsm -L ../../libbsm -I.
 PROG=		auditreduce
 MAN=		auditreduce.1
 DPADD=		/usr/lib/libbsm.a
