Correct misapprehension on my part: we install libbsm.h into /usr/include/bsm, so we should lay out OpenBSM under that assumption. That way libbsm builds with the same include layout assumptions as everything else.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 79155]

--- a/bsm/Makefile
+++ b/bsm/Makefile
@@ -6,7 +6,8 @@ INCS=	audit.h								\
 	audit_internal.h						\
 	audit_kevents.h							\
 	audit_record.h							\
-	audit_uevents.h
+	audit_uevents.h							\
+	libbsm.h
 
 TARGET=	${DESTDIR}/usr/include/bsm
 
