Add $P4$ to headers of all revision controlled files, except for VERSION.
Slight license formatting changes to some files.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90583]

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,5 @@
 #
-# $FreeBSD$
+# $P4: //depot/projects/trustedbsd/openbsm/tools/Makefile#3 $
 #
 
 CFLAGS+=	-I- -I .. -I ../libbsm -L ../libbsm -I.
