Reverse integrate @90631 and @90632 from TrustedBSD audit3 to TrustedBSD OpenBSM branch after they were submitted to the wrong branch:
OpenBSM information added to auditreduce.1 and praudit.1 man pages.

Man page cleanup:

- Remove event_code.5, it's a good idea, but its time has not yet
  come.
- Use .Fn when naming system calls instead of .Nm, as that's not
  the same thing.
- Remove references to FreeBSD as being the point of appearance of
  some calls, as they actually first appeared in Mac OS X/Solaris.
- Use .Os instead of .Os Mac OS X in man page headers, as these
  man pages will be used on several operating systems.
- Add authors/history information to additional pages.
- Document auditctl() a bit better.
- Document that A_SENDTRIGGER is specific to Mac OS X and FreeBSD.

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90634]

--- a/man/Makefile
+++ b/man/Makefile
@@ -1,5 +1,5 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/man/Makefile#4 $
+# $P4: //depot/projects/trustedbsd/openbsm/man/Makefile#5 $
 #
 
 MAN=	audit.2								\
@@ -14,7 +14,6 @@ MAN=	audit.2								\
 	audit_control.5							\
 	audit_event.5							\
 	audit_user.5							\
-	audit_warn.5							\
-	event_code.5
+	audit_warn.5
 
 .include <bsd.prog.mk>
