Build auditd with OpenBSM.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90757]

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,9 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile#2 $
+# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile#3 $
 #
 
-SUBDIR=	auditreduce							\
+SUBDIR=	auditd								\
+	auditreduce							\
 	praudit
 
 .include <bsd.subdir.mk>
