Add audit(8) to the set of automatically built binaries in OpenBSM.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 90795]

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,8 +1,9 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile#3 $
+# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile#4 $
 #
 
-SUBDIR=	auditd								\
+SUBDIR=	audit								\
+	auditd								\
 	auditreduce							\
 	praudit
 
