--- a/configure.ac
+++ b/configure.ac
@@ -3,10 +3,10 @@
 
 AC_PREREQ(2.59)
 AC_INIT([OpenBSM], [1.0a5], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
-AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#3 $])
+AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#4 $])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
 AC_CONFIG_AUX_DIR(config)
-AC_CONFIG_HEADER([config.h])
+AC_CONFIG_HEADER([config/config.h])
 
 # Checks for programs.
 AC_PROG_CC
