Test for a fully-featured queue.h, which is not present on all platforms that have queue.h.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 92501]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -21,6 +21,9 @@
 /* Define to 1 if you have the `ftruncate' function. */
 #undef HAVE_FTRUNCATE
 
+/* Define if queue.h includes LIST_FIRST */
+#undef HAVE_FULL_QUEUE_H
+
 /* Define to 1 if you have the `gettimeofday' function. */
 #undef HAVE_GETTIMEOFDAY
 
