Expose results of audit system call test not just as a config.h entry, but also to Makefiles so that components can be conditionally built.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 92524]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -3,6 +3,9 @@
 /* Define to 1 if you have the `alarm' function. */
 #undef HAVE_ALARM
 
+/* Define if audit system calls present */
+#undef HAVE_AUDIT_SYSCALLS
+
 /* Define to 1 if you have the `bzero' function. */
 #undef HAVE_BZERO
 
