Try alternative invocation with more configure-happy syntax.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 94157]

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.59)
 AC_INIT([OpenBSM], [1.0a5], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
-AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#19 $])
+AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#20 $])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADER([config/config.h])
@@ -16,7 +16,7 @@ AC_PROG_LIBTOOL
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 
-AC_SEARCH_LIBS(dlsym, -ldl,,)
+AC_SEARCH_LIBS(dlsym, dl)
 
 # Checks for header files.
 AC_HEADER_STDC
