Add configure tests for ipc_perm fields _key and _seq, as found in recent Mac OS X versions, in addition to the existing consideration of key, __key, seq, and __seq.
Regenerate.

Submitted by:	Eric Hall <trustedbsdat darkart dot com>

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 134372]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -39,6 +39,12 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define if ipc_perm._key instead of key */
+#undef HAVE_IPC_PERM__KEY
+
+/* Define if ipc_perm._seq instead of seq */
+#undef HAVE_IPC_PERM__SEQ
+
 /* Define if ipc_perm.__key instead of key */
 #undef HAVE_IPC_PERM___KEY
 
