- For darwin, added Mach IPC support for audit trigger messages. - Added LOG_PERROR flag to openlog when -d option is used with auditd. - Fixed minor autoconf bugs in audit and auditd dealing with queue.h. - Updated the HISTORY file.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 143821]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -174,6 +174,9 @@
 /* Define to 1 if your <sys/time.h> declares `struct tm'. */
 #undef TM_IN_SYS_TIME
 
+/* Define if uses Mach IPC for Triggers messages */
+#undef USE_MACH_IPC
+
 /* Version number of package */
 #undef VERSION
 
