Fixed problem when building outside the source directories.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 144425]

--- a/bin/audit/Makefile.am
+++ b/bin/audit/Makefile.am
@@ -1,8 +1,8 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/bin/audit/Makefile.am#2 $
+# $P4: //depot/projects/trustedbsd/openbsm/bin/audit/Makefile.am#3 $
 #
 
-INCLUDES = -I$(top_srcdir)
+INCLUDES = -I$(top_builddir) -I$(top_srcdir)
 
 sbin_PROGRAMS = audit
 audit_LDADD = $(top_builddir)/libbsm/libbsm.la
@@ -12,8 +12,8 @@ if USE_MACH_IPC
 audit_SOURCES = auditd_control_user.c audit.c
 CLEANFILES = auditd_control_user.c auditd_control_user.h
 
-auditd_control_user.c: auditd_control.defs 
-	$(MIG)	-user auditd_control_user.c -header auditd_control_user.h -server /dev/null -sheader /dev/null auditd_control.defs
+auditd_control_user.c: $(top_srcdir)/bin/auditd/auditd_control.defs 
+	$(MIG)	-user auditd_control_user.c -header auditd_control_user.h -server /dev/null -sheader /dev/null $(top_srcdir)/bin/auditd/auditd_control.defs
 else
 audit_SOURCES = audit.c
 endif
