--- a/bin/auditd/Makefile.am
+++ b/bin/auditd/Makefile.am
@@ -1,8 +1,8 @@
 #
-# $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/Makefile.am#2 $
+# $P4: //depot/projects/trustedbsd/openbsm/bin/auditd/Makefile.am#3 $
 #
 
-INCLUDES = -I$(top_srcdir)
+INCLUDES = -I$(top_builddir) -I$(top_srcdir)
 
 sbin_PROGRAMS = auditd
 auditd_LDADD = $(top_builddir)/libbsm/libbsm.la
@@ -13,10 +13,10 @@ auditd_SOURCES = auditd_control_server.c audit_triggers_server.c audit_warn.c au
 CLEANFILES = auditd_control_server.c auditd_control_server.h audit_triggers_server.c audit_triggers_server.h
 
 auditd_control_server.c: auditd_control.defs
-	$(MIG) -user /dev/null -header /dev/null -server auditd_control_server.c -sheader auditd_control_server.h auditd_control.defs
+	$(MIG) -user /dev/null -header /dev/null -server auditd_control_server.c -sheader auditd_control_server.h $(top_srcdir)/bin/auditd/auditd_control.defs
 
 audit_triggers_server.c: audit_triggers.defs
-	$(MIG) -user /dev/null -header /dev/null -server audit_triggers_server.c -sheader audit_triggers_server.h audit_triggers.defs
+	$(MIG) -user /dev/null -header /dev/null -server audit_triggers_server.c -sheader audit_triggers_server.h $(top_srcdir)/bin/auditd/audit_triggers.defs
 else
 auditd_SOURCES = audit_warn.c auditd.c
 endif
